remove 100% height from logo as it was preventing menu links from being clicked on smaller viewports

--- a/tbx/static_src/sass/components/_logo.scss
+++ b/tbx/static_src/sass/components/_logo.scss
@@ -1,6 +1,5 @@
 .logo {
     width: 20.8vw;
-    height: 100%;
 
     @include media-query(large) {
         margin-left: -4.17vw;
